--- a/edit_inventory.html
+++ b/edit_inventory.html
@@ -35,6 +35,7 @@
         <div id="drop-area">Drop your structure file here</div>
         <input type="file" id="file-input">
     </div>
+    <p>made by Slackow, it's a bit of a hack but it works.</p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
